[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["Heinrich Hartmann <heinrich@heinrichhartmann.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
telegram_bot = 'telegram_bot:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
